# skidy

./: README.md  readme_original.md
skidy_bringup/: CMakeLists.txt  package.xml
skidy_bringup/launch/: bringup_sim.launch.py
skidy_controllers/: CMakeLists.txt  package.xml
skidy_controllers/config/: diffDrive.yaml  gazebo_ros_control_params.yaml
skidy_controllers/launch/: skidy_controller.launch  skidy_controller_sim.launch
skidy_description/: CMakeLists.txt  package.xml
skidy_description/gazebo_worlds/: simple_world.world
skidy_description/launch/: 001_skidy_in_rviz.launch  002_gazebo_world.launch  003_skidy_in_gazebo.launch  static_transform_publisher.launch.py
skidy_description/rviz/: device.rviz  skidy_in_rviz.rviz  test.rviz
skidy_description/urdf/: 001_skidy_full.xacro  002_skidy_compact.xacro  materials.xacro  robot_diff_drive.xacro  robot_test_diff_drive.urdf  skidy_gazebo.xacro  skidy_macro.xacro
skidy_description/worlds/: primitives.sdf  primitives_playground.sdf
skidy_navigation/: CMakeLists.txt  package.xml
skidy_navigation/config/: localization_params.yaml  skidy_base_local_planner_params.yaml  skidy_costmap_common_params.yaml  skidy_global_costmap_params.yaml  skidy_local_costmap_params.yaml
skidy_navigation/launch/: robot_localization.launch.py  rtabmap_odometry.launch.py  skidy_gmapping.launch  skidy_motion_planning.launch
skidy_navigation/maps/: map1.pgm  map1.yaml  simple_world.pgm  simple_world.yaml  simple_world2.pgm  simple_world2.yaml
skidy_navigation/scripts/: follow_wall.py  go_to_point.py  obstacle_avoidance.py  (+1 more)
(+6 files in other folders)
